# django-zeal

./: .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mise.toml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
.github/workflows/: benchmark.yaml  release-please.yaml  release.yaml  test.yaml  zizmor.yaml
auto/: autoresearch.md  autoresearch.sh  bench.py
hooks/: pre-commit  pre-push
src/queryspy/: __init__.py  apps.py  errors.py  listeners.py  middleware.py  patch.py  util.py
src/zeal/: __init__.py  apps.py  constants.py  errors.py  listeners.py  middleware.py  patch.py  signals.py  util.py
src/zealot/: __init__.py  apps.py  errors.py  listeners.py  middleware.py  patch.py  util.py
tests/: conftest.py  factories.py  test_listeners.py  test_nplusones.py  test_patch.py  test_performance.py  test_signals.py  test_util.py
tests/djangoproject/: manage.py  settings.py  urls.py
tests/djangoproject/social/: apps.py  models.py  views.py
