[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-zeal"
version = "2.2.1"
description = "Detect N+1s in your Django app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "pytest~=8.2.2",
    "pytest-django~=4.8.0",
    "factory-boy==3.3.0",
    "ruff~=0.5.0",
    "django-stubs~=5.0",
    "pyright",
    "build",
    "twine",
    "pytest-random-order",
    "pytest-mock",
    "pytest-codspeed",
    "typing-extensions",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79
exclude = ["auto", ".venv"]

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "N",   # naming
    "B",   # bugbear
    "FIX", # disallow FIXME/TODO comments
    "F",   # pyflakes
    "T20", # flake8-print
    "ERA", # commented-out code
    "UP",  # pyupgrade
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["auto", "**/.venv*/**", ".worktrees"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djangoproject.settings"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "--nomigrations"
markers = ["nozeal: disable the auto-setup of zeal in a test"]
